add section portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,15 @@ body {
 .team {
   list-style: none;
 }
+.portfolio {
+  list-style: none;
+}
+.portfolio-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+}
+.portfolio-text {
+  color: #434455;
+  line-height: 1.5;
+}
