--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .logo-span {
-  color: #2e2f42;
+  color: #f4f4fd;
 }
 /* navigation */
 .menu {
@@ -162,4 +162,7 @@ body {
   color: #f4f4fd;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.logo-span-footer {
+  color: #f4f4fd;
 }
